fix viewport height, spacing of components

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .outer {
-  padding: 40px 20px;
   height: 100%;
   display: flex;
   justify-content: center;
@@ -8,6 +7,14 @@
 
 .inner {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   max-width: 420px;
+  padding: 24px 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  flex: 1 1 auto;
+  overflow-y: hidden;
 }
